5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1815_2573.log
== SUBMITION (2019-06-12 12:02:09) 
-- CODE:
p = array(eval(input("Pesos: ")), dtype=float)
a = array(eval(input("Alturas: ")), dtype=float)
s = size(p)
z = zeros(s, dtype=float)

for i in range(s):
	imc = (p[i])/(a[i]**2)
	z[i] = round(imc, 2)
	
j = max(z)

if (j < 17):
	sit = "MUITO ABAIXO DO PESO"
elif (j >= 17 and j <= 18.49):
	sit = "ABAIXO DO PESO"
elif (j >= 18.50 and j <= 24.99):
	sit = "PESO NORMAL"
elif (j >= 25 and j <= 29.99):
	sit = "ACIMA DO PESO"
elif (j >= 30 and j <= 34.99):
	sit = "OBESIDADE"
elif (j >= 35 and j <= 39.99):
	sit = "OBESIDADE SEVERA"
elif (j >= 40):
	sit = "OBESIDADE MORBIDA"

	
f = "O MAIOR IMC DA TURMA EH:"

print(z)
print(f, j)
print(sit)
-- EXECUTION TIME:
0.806842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2573/main.py", line 1, in <module>
    p = array(eval(input()), dtype=float)
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:02:49) 
-- CODE:
p = array(eval(input("Pesos: ")), dtype=float)
a = array(eval(input("Alturas: ")), dtype=float)
s = size(p)
z = zeros(s, dtype=float)

for i in range(s):
	imc = (p[i])/(a[i]**2)
	z[i] = round(imc, 2)
	
j = max(z)

if (j < 17):
	sit = "MUITO ABAIXO DO PESO"
elif (j >= 17 and j <= 18.49):
	sit = "ABAIXO DO PESO"
elif (j >= 18.50 and j <= 24.99):
	sit = "PESO NORMAL"
elif (j >= 25 and j <= 29.99):
	sit = "ACIMA DO PESO"
elif (j >= 30 and j <= 34.99):
	sit = "OBESIDADE"
elif (j >= 35 and j <= 39.99):
	sit = "OBESIDADE SEVERA"
elif (j >= 40):
	sit = "OBESIDADE MORBIDA"

	
f = "O MAIOR IMC DA TURMA EH:"

print(z)
print(f, j)
print(sit)
-- EXECUTION TIME:
0.59933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2573/main.py", line 1, in <module>
    p = array(eval(input()), dtype=float)
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:09:39) 
-- CODE:
p = array(eval(input("Pesos: ")), dtype=float)
a = array(eval(input("Alturas: ")), dtype=float)
s = size(p)
z = zeros(s, dtype=float)

for i in range(s):
	imc = (p[i])/(a[i]**2)
	z[i] = round(imc, 2)
	
j = max(z)

if (j < 17):
	sit = "MUITO ABAIXO DO PESO"
elif (j >= 17 and j <= 18.49):
	sit = "ABAIXO DO PESO"
elif (j >= 18.50 and j <= 24.99):
	sit = "PESO NORMAL"
elif (j >= 25 and j <= 29.99):
	sit = "ACIMA DO PESO"
elif (j >= 30 and j <= 34.99):
	sit = "OBESIDADE"
elif (j >= 35 and j <= 39.99):
	sit = "OBESIDADE SEVERA"
elif (j >= 40):
	sit = "OBESIDADE MORBIDA"

	
f = "O MAIOR IMC DA TURMA EH:"

print(z)
print(f, j)
print(sit)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p = array(eval(input()), dtype=float)
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
